--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,10 @@
             </plugin>
 
             <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>UTF-8</encoding>
+                    <argLine>-Xmx1024m</argLine>
                 </configuration>
             </plugin>
 
