--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.11</version>
                 <configuration>
-                    <imageName>test/test</imageName>
+                    <imageName>jenkins/test</imageName>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
                         <imageTag>latest</imageTag>
